feat: add raycaster project with interactive mouse functionality

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
           <p>Interactive galaxy visualization with Three.js</p>
           <a href="/src/galaxy generator/">Open Project</a>
         </div>
+        <div class="project-card">
+          <h2>Raycaster</h2>
+          <p>Mouse interaction with Three.js objects</p>
+          <a href="/src/raycaster/">Open Project</a>
+        </div>
       </div>
     </div>
   </body>
