feat: add raw shader project with custom shaders and GLSL integration

--- a/index.html
+++ b/index.html
@@ -70,12 +70,17 @@
         <div class="project-card">
           <h2>Galaxy Generator</h2>
           <p>Interactive galaxy visualization with Three.js</p>
-          <a href="/src/galaxy generator/">Open Project</a>
+          <a href="/src/galaxy generator/index.html">Open Project</a>
         </div>
         <div class="project-card">
           <h2>Raycaster</h2>
           <p>Mouse interaction with Three.js objects</p>
-          <a href="/src/raycaster/">Open Project</a>
+          <a href="/src/raycaster/index.html">Open Project</a>
+        </div>
+        <div class="project-card">
+          <h2>Raw Shader</h2>
+          <p>Custom shaders in Three.js</p>
+          <a href="/src/raw-shader/index.html">Open Project</a>
         </div>
       </div>
     </div>
