feat: add ragging sea project with dynamic simulation and shader integration

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
           <p>Custom shader patterns in Three.js</p>
           <a href="/src/shader-pattern/index.html">Open Project</a>
         </div>
+         <div class="project-card">
+          <h2>Ragging Sea</h2>
+          <p>Dynamic sea simulation with Three.js</p>
+          <a href="/src/ragging-sea/index.html">Open Project</a>
       </div>
     </div>
   </body>
