feat: add hologram project with shader effects and GUI integration

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
           <h2>Ragging Sea</h2>
           <p>Dynamic sea simulation with Three.js</p>
           <a href="/src/ragging-sea/index.html">Open Project</a>
+         </div>
+          <div class="project-card">
+            <h2>Hologram</h2>
+            <p>Holographic shader effect in Three.js</p>
+            <a href="/src/hologram/index.html">Open Project</a>
       </div>
     </div>
   </body>
